force actions_column min-width:140px to prevent dropdown collapse
 * fix bug 953750

--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -637,6 +637,7 @@ td.actions_column {
   width: 150px;
   padding: 10px;
   position: relative;
+  min-width: 140px;
   min-height: 20px;
 }
 
